cleanup code; fix deprecations; update dependencies